<resources>
    <string name="app_name">Rentit</string>
    <string name="default_web_client_id">376755202034-3h1ue7secn4qf5585m3qvlpf9qhevc2p.apps.googleusercontent.com</string>
    <string name="signup">SIGNUP</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="not_yet_registered_signup">Not yet registered? SignUp</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="search_for_a_location">Search for a location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_banner_image_representing_your_content">A banner image representing your content</string>
    <string name="a_vibrant_banner_showcasing_your_latest_promotions_and_offers">A vibrant banner showcasing your latest promotions and offers</string>
    <string name="a_captivating_banner_highlighting_your_featured_products_and_services">A captivating banner highlighting your featured products and services</string>
    <string name="select_a_location">Select a location</string>
    <string name="_5">$5</string>
    <string name="delivery">Delivery</string>
    <string name="not_received">Not Received</string>
    <string name="payment">Payment</string>
    <string name="customer_name">Customer Name</string>
    <string name="create_naccount">Create\nAccount</string>
    <string name="design">Design</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="full_name">Full name</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_a_account">Don\'t have a Account ?</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="documents">Documents</string>
    <string name="proceed">Proceed</string>
    <string name="the_vehicle_is_a_sleek_and_efficient_electric_car_designed_for_urban_commuting_boasting_cutting_edge_technology_and_sustainable_performance">The vehicle is a sleek and efficient electric car designed for urban commuting, boasting cutting-edge technology and sustainable performance.</string>
    <string name="features">Features</string>
    <string name="short_description">Short Description</string>
    <string name="vechicle_name">Vechicle Name</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="explore_vechicle">Explore Vechicle</string>
    <string name="booking">Booking</string>
    <string name="image">Image</string>
    <string name="_700">700</string>
    <string name="menu_vechicle_name">Vechicle Name</string>
    <string name="view_car">View Car</string>
    <string name="popular">Popular</string>
    <string name="rent_again">Rent Again</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="_400">400</string>
    <string name="recent_rent">Recent Rent</string>
    <string name="menu">Menu</string>
    <string name="save_information">Save Information</string>
    <string name="received">Received</string>
    <string name="cart">Cart</string>
</resources>