<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminSignUpActivity">

    <EditText
        android:id="@+id/signupAdmin"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/edittext_border"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/signupPass"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Password"
        android:background="@drawable/edittext_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupAdmin"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signupButtonAdmin"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="136dp"
        android:onClick="onAdminLoginClick"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/already_registered_login"
        android:textColor="#ACC18A"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="128dp"
        android:fontFamily="@font/aclonica"
        android:text="Admin\nSign Up"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>