<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminLoginActivity">

    <EditText
        android:id="@+id/loginAdmin"
        android:layout_width="344dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Username"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/loginPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Password"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginAdmin"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="136dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/signupRedirect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPass"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupRedirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:text="@string/not_yet_registered_signup"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="128dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/admin_nlogin"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>